# SystemStatsApi

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: release.yml
src/: cpu.rs  disk.rs  interface.rs  interfaces.rs  main.rs  memory.rs  system.rs
src/cpu_stats/: cpu.rs  cpu_load.rs  mod.rs
