[package]
name = "server-info-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-rt = "2.7.0"
sysinfo = "0.23.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.64"
systemstat = "0.1.10"