[package]
name = "server-info-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-rt = "2.7.0"
sysinfo = "0.23.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.64"
systemstat = "0.1.10"
network-interface = "0.1.3-beta"
log = "0.4.16"
zstd = "0.10.0+zstd.1.5.2"
zstd-safe = "4.1.4+zstd.1.5.2"
zstd-sys = "1.6.3+zstd.1.5.2"